# evidify-radiology-research

./: .gitignore  BETA_INVITATION.md  BETA_README.md  BUILD.md  BUILD_ANYWHERE.md  CHANGELOG.md  EVIDIFY_PRODUCT_DOCUMENT_JAN2026.md  HANDOFF_DEBUG_NOTES.md  INSTALL.md  INTEGRATION_SUMMARY.md  LOCAL_TESTING_INSTRUCTIONS.md  Makefile  Oops.rej  PRODUCT_REVIEW_PACK.md  QUICKSTART.md  README.md  RESTORE_DRILL_REPORT_TEMPLATE.md  ROADMAP.md  SCREEN_RECORDING_SCRIPT.md  SECURITY_FIXES.md  SPEC-v4.md  SPRINT_BACKLOG.md  SPRINT_BACKLOG_v2.md  TESTING_BUNDLE_v4.2.1.md  TEST_CHECKLIST_v4.2.7-beta.md  TOMORROW.md  build-and-test.sh  evidify-panel-review.docx  generate_panel_doc.py  install.sh  make_brown_pack.sh  package-lock.json  package.json  rust-toolchain.toml  rust-toolchain.toml.rej
BROWN_DEMO_PACK_2026-01-31_0849/: README_FIRST.md
beta-release/: BETA_AGREEMENT.md  BETA_CHECKLIST.md  BETA_FEEDBACK_FORMS.md  BETA_INSTALLATION_GUIDE.md  BETA_QUICK_REFERENCE.md  BETA_STRATEGY.md  BETA_WELCOME_EMAIL.md
docs/: 00_EXEC_SUMMARY.md  01_AI_DEEP_ANALYSIS_ARCH.md  02_CONSENT_PACK.md  03_JURISDICTION_ENGINE_SPEC.md  04_DESTRUCTION_CERTIFICATE_SPEC.md  05_CODEBASE_UPDATE_PLAN.md  06_TROUBLESHOOTING.md  07_ROADMAP.md  08_DEV_TICKETS.csv  ADMINISTRATOR_GUIDE.md  BETA_TO_PRODUCTION_ROADMAP.md  CLAUDE_PROMPTS.md  CONTINUATION_BUNDLE_JAN9_2026.md  ConsentForm_v1.md  DestructionCertificate_example.json  ENTERPRISE_DEFENSIBILITY_PACK.md  EVIDIFY_MASTER_PRD_JAN2026.md  EVIDIFY_UI_STABILITY_BACKLOG_v4.3.1.md  INNOVATION_BLUEPRINT.md  PatientFAQ_v1.md  RADIOLOGY_EXPORT_VERIFICATION_CONTRACT.md  RELEASE_MANIFEST.md  TAMPER_DEMO.md  THREAT_MODEL.md  USER_MANUAL.md  VISION_DOCUMENT.md  VULNERABILITY_MANAGEMENT_POLICY.md  recording_policy.json
frontend/: demo.html  index-demo.html  (+7 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  analysis.rs  attestation.rs  audit.rs  audit_pack.rs  clipboard.rs  commands.rs  crypto.rs  deidentify.rs  ehr_export.rs  ethics.rs  export.rs  legal_export.rs  main.rs  metrics.rs  models.rs  performance.rs  policy.rs  rag.rs  recording.rs  siem.rs  supervision.rs  time_tracking.rs  vault.rs  voice.rs
verification/canonicalization/rust/: Cargo.toml
verification/canonicalization/rust/src/: lib.rs
(+311 files in other folders)
