[package]
name = "evidify-canonicalization"
version = "1.0.0"
edition = "2021"
description = "Evidify canonicalization library for deterministic JSON serialization"
license = "UNLICENSED"

[dependencies]
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
